# PyTorch-Memory-Profiler

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: coding-standards.mdc  memory-tracer-api.mdc  plugin-development.mdc  project-structure.mdc  testing-guidelines.mdc  troubleshooting.mdc
docs/: custom-usage.md
docs/plugins/: megatron.md
examples/: mcore_simple.py  single_gpu.py
examples/mcore/: pretrain_gpt.py  run.sh
examples/megatron-lm/: deepseek_v3.sh  llama_70b.sh  mixtral_8x7b.sh  qwen3_235b.sh
examples/simple/: single_gpu.py
memory_profiler/: __init__.py  memory_dispatch_mode.py  utils.py
memory_profiler/core/: __init__.py  logger.py  memory_dispatch_mode.py  memory_tracer.py  mod_tracker.py
memory_profiler/plugins/: __init__.py  base_plugin.py  distributed_plugin.py  megatron_core_plugin.py  p2p_communication_plugin.py  transformer_engine_plugin.py
memory_profiler/tools/: visualizer.py
patches/: memory_tracing_mcore.patch
tools/: README.md  pyproject.toml  visualizer.py
