[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-memory-profiler"
version = "0.1.0"
description = "A utility library for estimating and analyzing the memory footprint of PyTorch models"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}  # Update if different license
authors = [
    {name = "PyTorch Memory Profiler Contributors"},
]
maintainers = [
    {name = "PyTorch Memory Profiler Contributors"},
]
keywords = [
    "pytorch",
    "memory",
    "profiling",
    "deep-learning",
    "neural-networks",
    "gpu-memory",
    "memory-estimation",
    "fake-tensor",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=1.12.0",  # Required for FakeTensorMode and TorchDispatchMode
]

[project.optional-dependencies]
rich = [
    "rich>=10.0.0",  # For enhanced log formatting and visual output
]
megatron = [
    "megatron-core",  # For tracing memory in models using Megatron's pipeline parallelism
]
te = [
    "transformer-engine",  # For tracing memory in models using Transformer Engine layers
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
]
all = [
    "rich>=10.0.0",
    # Note: megatron-core and transformer-engine are not included in 'all'
    # because they have specific installation requirements and dependencies
]

[project.urls]
Homepage = "https://github.com/yourusername/PyTorch-Memory-Profiler"
Documentation = "https://github.com/yourusername/PyTorch-Memory-Profiler#readme"
Repository = "https://github.com/yourusername/PyTorch-Memory-Profiler.git"
"Bug Tracker" = "https://github.com/yourusername/PyTorch-Memory-Profiler/issues"

[tool.setuptools]
packages = ["memory_profiler", "memory_profiler.core", "memory_profiler.plugins"]

[tool.setuptools.package-data]
memory_profiler = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | examples
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "megatron.*",
    "transformer_engine.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=memory_profiler",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
] 