[project]
name = "pytorch-memory-profiler-tools"
version = "0.1.0"
description = "Visualization tools for PyTorch Memory Profiler"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "plotly>=5.15.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]



[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 